# 2025-ermct-project

./: .dockerignore  .env.example  .env.production.example  .gitignore  DEPLOYMENT.md  Dockerfile  README.md  docker-compose.prod.yml  pyproject.toml
app/: complaint_mapping.py  config.py  config_beds.py  distance_logic.py  error_utils.py  ktas_engine.py  ktas_normalizer.py  ktas_rag.py  main.py  procedure_groups.py  schemas.py  state_assignments.py  stt_cleaner.py  triage_utils.py
app/routers/: reservations.py
app/services/: ermct_client.py  region_resolver.py  sigungu_search.py
data/: ER_Call_Scenarios_Custom_KTAS.csv  sigungu_adjacency.csv  sigungu_adjacency.json  sigungu_adjacency_readable.csv  sigungu_adjacency_readable.json  table_adult.csv
front/: .env.example  Dockerfile  README.md  index.html  package-lock.json  vite.config.ts
front/src/: App.tsx  SUPABASE_SETUP_GUIDE.md  index.css
front/src/types/: index.ts
nginx/: default.conf
scripts/: export_seoul_hospitals.py  export_seoul_hospitals_geo.py  rag_performance.py  scenario_extractor.py  sync_hospital_status.py
tests/: test_complaint_mapping.py  test_config_beds.py  test_error_utils.py  test_frontend_api_base_url.py  test_ktas_engine.py  test_ktas_rag.py  test_main_routes.py  test_nearest_ranking.py  test_production_sync_worker.py  test_routing_fallback.py  test_sigungu_search.py  test_stage1_response.py  test_stt_cleaner.py  test_sync_hospital_status.py
wiki_draft/: API-Reference.md  Example-Usage.md  Home.md  Installation.md  Limitations-and-Future-Work.md  Supabase-Setup.md  Tech-Stack.md
(+20 files in other folders)
